fix colour and spacing

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ body {
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-feature-settings: "calt", "liga", "hist", "onum", "pnum";
   font-size: 1rem;
-  color: #222;
+  color: rgb(0, 0, 0);
 }
 
 .clear {
@@ -121,7 +121,7 @@ p {
   font-size: 1em;
   line-height: 1.4em;
   margin-bottom: 20px;
-  color: #444;
+  color: rgb(0, 0, 0);
   transition: all 1s linear;
   -o-transition: all 1s linear;
   -moz-transition: all 1s linear;
@@ -209,13 +209,13 @@ a {
 
 #contactDetails ul li {
   margin-bottom: 3px;
-  color: #444;
+  color: rgb(0, 0, 0);
   display: inline;
 }
 
 #contactDetails ul li a,
 a[href^=tel] {
-  color: #444;
+  color: rgb(0, 0, 0);
   text-decoration: none;
   -webkit-transition: all 0.3s ease-in;
   -moz-transition: all 0.3s ease-in;
@@ -277,7 +277,7 @@ section:last-child {
   column-count: 3;
   margin-bottom: 20px;
   font-size: 1em;
-  color: #444;
+  color: rgb(0, 0, 0);
 }
 
 .keySkills ul li {
